--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -3,12 +3,12 @@
 <head>
     <meta charset="utf-8" />
     <link href="{{ asset('assets/bootstrap/css/bootstrap.min.css') }}" rel="stylesheet" />
-    <title>MicroCMS - Home</title>
+    <title>Silex - Home</title>
 </head>
 <body>
     <div class="container">
         <header>
-            <h1>MicroCMS</h1>
+            <h1>Silex</h1>
         </header>
         <div class="col-md-12">
             {% for article in articles %}
