--- a/views/author.html.twig
+++ b/views/author.html.twig
@@ -3,30 +3,28 @@
 <head>
     <meta charset="utf-8" />
     <link href="{{ asset('assets/bootstrap/css/bootstrap.min.css') }}" rel="stylesheet" />
-    <title>Silex - Home</title>
+    <title>Silex - list</title>
 </head>
 <body>
     <div class="container">
         <header>
             <h1>Silex</h1>
         </header>
+        <a href="{{ path('homepage') }}">Home</a> -> <a href="{{ path('listWithAuthors') }}">list page</a>
         <div class="col-md-8">
-            <a href="{{ path('listWithAuthors')}}">Liste avec auteurs</a>
+            <h2>Auteur:</h2>
+            <p>Nom: {{ user.name }}</p>
+            <p>Email: {{ user.email }}</p>
+            <p>Téléphone: {{ user.phone }}</p>
+            <hr>
+            <h2>Ses articles</h2>
             {% for article in articles %}
             <article>
-                <h2>
+                <h3>
                     <a href="{{ path('article', {id:article.id}) }}">{{ article.title }}</a>
-                </h2>
+                </h3>
+                <p>{{ article.content }}</p>
                 <p>publié le {{ article.date_publi }}</p>
-            </article>
-            {% endfor %}
-        </div>
-        <div class="col-md-4">
-            {% for user in users %}
-            <article>
-                <h2>{{ user.name }}</h2>
-                <p>{{ user.email }}</p>
-                <p>{{ user.phone }}</p>
             </article>
             {% endfor %}
         </div>
