--- a/views/author.html.twig
+++ b/views/author.html.twig
@@ -1,35 +1,24 @@
-<!doctype html>
-<html>
-<head>
-    <meta charset="utf-8" />
-    <link href="{{ asset('assets/bootstrap/css/bootstrap.min.css') }}" rel="stylesheet" />
-    <title>Silex - list</title>
-</head>
-<body>
-    <div class="container">
-        <header>
-            <h1>Silex</h1>
-        </header>
-        <a href="{{ path('homepage') }}">Home</a> -> <a href="{{ path('listWithAuthors') }}">list page</a>
-        <div class="col-md-8">
-            <h2>Auteur:</h2>
-            <p>Nom: {{ user.username }}</p>
-            <p>Email: {{ user.email }}</p>
-            <p>Téléphone: {{ user.phone }}</p>
-            <hr>
-            <h2>Ses articles</h2>
-            {% for article in articles %}
-            <article>
-                <h3>
-                    <a href="{{ path('article', {id:article.id}) }}">{{ article.title }}</a>
-                </h3>
-                <p>{{ article.content }}</p>
-                <p>publié le {{ article.date_publi }}</p>
-            </article>
-            {% endfor %}
-        </div>
-        <footer class="footer">
-        </footer>
+{% extends "layout.html.twig" %}
+
+{% block title %}Auteur{% endblock %}
+
+{% block content %}
+    <a href="{{ path('homepage') }}">Home</a> -> <a href="{{ path('listWithAuthors') }}">list page</a>
+    <div class="col-md-8">
+        <h2>Auteur:</h2>
+        <p>Nom: {{ user.username }}</p>
+        <p>Email: {{ user.email }}</p>
+        <p>Téléphone: {{ user.phone }}</p>
+        <hr>
+        <h2>Ses articles</h2>
+        {% for article in articles %}
+        <article>
+            <h3>
+                <a href="{{ path('article', {id:article.id}) }}">{{ article.title }}</a>
+            </h3>
+            <p>{{ article.content }}</p>
+            <p>publié le {{ article.date_publi }}</p>
+        </article>
+        {% endfor %}
     </div>
-</body>
-</html>
+{% endblock %}
