--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -1,42 +1,31 @@
-<!doctype html>
-<html>
-<head>
-    <meta charset="utf-8" />
-    <link href="{{ asset('assets/bootstrap/css/bootstrap.min.css') }}" rel="stylesheet" />
-    <title>Silex - Home</title>
-</head>
-<body>
-    <div class="container">
-        <header>
-            <h1>Silex</h1>
-        </header>
-        <div class="col-md-8">
-            <a href="{{ path('listWithAuthors')}}">Liste avec auteurs</a> |
-            {% if is_granted('IS_AUTHENTICATED_FULLY') %}
-            <a href="{{ path('logout')}}">Logout</a>
-            {% else %}
-            <a href="{{ path('login')}}">Login</a>
-            {% endif %}
-            {% for article in articles %}
-            <article>
-                <h2>
-                    <a href="{{ path('article', {id:article.id}) }}">{{ article.title }}</a>
-                </h2>
-                <p>publié le {{ article.date_publi }}</p>
-            </article>
-            {% endfor %}
-        </div>
-        <div class="col-md-4">
-            {% for user in users %}
-            <article>
-                <h2>{{ user.username }}</h2>
-                <p>{{ user.email }}</p>
-                <p>{{ user.phone }}</p>
-            </article>
-            {% endfor %}
-        </div>
-        <footer class="footer">
-        </footer>
+{% extends "layout.html.twig" %}
+
+{% block title %}Homepage{% endblock %}
+
+{% block content %}
+    <div class="col-md-8">
+        <a href="{{ path('listWithAuthors')}}">Liste avec auteurs</a> |
+        {% if is_granted('IS_AUTHENTICATED_FULLY') %}
+        <a href="{{ path('logout')}}">Logout</a>
+        {% else %}
+        <a href="{{ path('login')}}">Login</a>
+        {% endif %}
+        {% for article in articles %}
+        <article>
+            <h2>
+                <a href="{{ path('article', {id:article.id}) }}">{{ article.title }}</a>
+            </h2>
+            <p>publié le {{ article.date_publi }}</p>
+        </article>
+        {% endfor %}
     </div>
-</body>
-</html>
+    <div class="col-md-4">
+        {% for user in users %}
+        <article>
+            <h2>{{ user.username }}</h2>
+            <p>{{ user.email }}</p>
+            <p>{{ user.phone }}</p>
+        </article>
+        {% endfor %}
+    </div>
+{% endblock %}
