--- a/views/list.html.twig
+++ b/views/list.html.twig
@@ -1,27 +1,15 @@
-<!doctype html>
-<html>
-<head>
-    <meta charset="utf-8" />
-    <link href="{{ asset('assets/bootstrap/css/bootstrap.min.css') }}" rel="stylesheet" />
-    <title>Silex - list</title>
-</head>
-<body>
-    <div class="container">
-        <header>
-            <h1>Silex</h1>
-        </header>
+{% extends "layout.html.twig" %}
+
+{% block title %}List{% endblock %}
+{% block content %}
+    <div class="col-md-8">
         <a href="{{ path('homepage') }}">Home</a>
-        <div class="col-md-8">
-            {% for article in articles %}
-            <article>
-                <h2>{{ article.title }}</h2>
-                <p>publié par <a href="{{ path('author', {id:article.author.id}) }}">{{ article.author.username }}</a></p>
-                <p> le {{ article.date_publi }}</p>
-            </article>
-            {% endfor %}
-        </div>
-        <footer class="footer">
-        </footer>
+        {% for article in articles %}
+        <article>
+            <h2>{{ article.title }}</h2>
+            <p>publié par <a href="{{ path('author', {id:article.author.id}) }}">{{ article.author.username }}</a></p>
+            <p> le {{ article.date_publi }}</p>
+        </article>
+        {% endfor %}
     </div>
-</body>
-</html>
+{% endblock %}
