--- a/views/layout.html.twig
+++ b/views/layout.html.twig
@@ -2,13 +2,17 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <link href="{{ asset('assets/bootstrap/css/bootstrap.min.css') }}" rel="stylesheet" />
+    <link href="{{ asset('assets/bootstrap/css/bootstrap.min.css') }}" rel="stylesheet" />    
+    <script src="https://use.fontawesome.com/055327755e.js"></script>
     <title>{% block title %}{% endblock %}</title>
 </head>
 <body>
     <div class="container">
         <header>
             <h1>Silex</h1>
+            {% if app.user and is_granted('ROLE_ADMIN') %}
+               <a href="{{ path('adminHome') }}">Administration</a>
+            {% endif %}
         </header>
         {% block content %}
         
@@ -16,5 +20,8 @@
         <footer class="footer">
         </footer>
     </div>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
 </body>
 </html>
