--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -8,8 +8,16 @@
         {% if is_granted('IS_AUTHENTICATED_FULLY') %}
         <a href="{{ path('logout')}}">Logout</a>
         {% else %}
-        <a href="{{ path('login')}}">Login</a>
+        <a href="{{ path('login')}}">Login</a> |
+        <a href="{{ path('signin')}}">Sign in</a>
         {% endif %}
+
+        {% for flashMessage in app.session.flashbag.get('success') %}
+        <div class="alert alert-success">
+            {{ flashMessage }}
+        </div>
+        {% endfor %}
+
         {% for article in articles %}
         <article>
             <h2>
